<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestingORMLite</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- activity_user_details -->
    <string name="title_activity_user_details">UserDetailsActivity</string>
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint">Last Name</string>
    <string name="emailIdHint">Email Address</string>
    <string name="passwordHint">Desired Password</string>
    <string name="nextButton">Next</string>
    <string name="title_activity_user_details_input">UserDetailsInputActivity</string>

</resources>